Use URIs instead of URLs when caching the schemas
Noticed by FindBugs.